--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "highcharts": "^7.1.3",
+    "moment": "^2.24.0",
+    "ngx-daterangepicker-material": "^2.1.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
